fix #849 TagBox set to readOnly, the text is hard to read

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-forms.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-forms.css
@@ -41,6 +41,11 @@ fieldset.dui {
     color: var(--dui-form-field-readonly-color);
 }
 
+.dui-form-field[readonly]:not(.dui-undimmed) .dui-chip:not(.dui-field-error):not(.dui-field-helper) > .dui-chip-value {
+    color: var(--dui-accent-fg-clr, var(--dui-text-color));
+    opacity: 0.75;
+}
+
 .dui-form-field[readonly] .dui:not(.dui-field-error):not(.dui-field-helper) {
     cursor: var(--dui-form-field-readonly-cursor);
 }
